--- a/experiments/arduino/arduino.html
+++ b/experiments/arduino/arduino.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173386228-1"></script>
+     <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+           gtag('js', new Date());
 
+           gtag('config', 'UA-173386228-1');
+     </script>
      <title>Arduino Projects | EleComHacks</title>
 
      <meta charset="UTF-8">
