--- a/experiments/raspberry-pi/getting-started-with-rpi.html
+++ b/experiments/raspberry-pi/getting-started-with-rpi.html
@@ -104,11 +104,11 @@
                               <p>Anyhow you can use this link to begin it from scratch i.e. Downloading the image file and burning the image to SD Card and continue from here to enable SSH </p>
                               <h3>Step 1: Adding few files to the extracted disk image</h3>
                               <p>Here is a image of the files available in the SD card</p>
-                              <img src="../../images/before_ssh.jpg" alt="Before SSH File">
+                              <img src="../../images/before_ssh.jpg" alt="Before SSH File" height="600px">
                               <br>
                               <p>Now let's add an empty file named <b>ssh</b> <i>{Do not add any extension}.</i> To do this, right-click in an empty space and click <i>New -> Text Document </i></p>
                               <p>Name the empty file as <em>"ssh"</em></p>
-                              <img src="../../images/after_ssh.jpg" alt="After adding SSH">
+                              <img src="../../images/after_ssh.jpg" alt="After adding SSH" height="600px">
                               <br>
                               <p>Now Let's add another file name <i>wpa_supplicant.conf</i>. And the content to that file is as below:</p>
                               <code> ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev <br>
